--- a/ui/src/app/main-table/main-table.component.scss
+++ b/ui/src/app/main-table/main-table.component.scss
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 1100px;
+    max-width: 1100px;
     height: 100px;
     margin: 0 auto;
   }
@@ -17,7 +17,7 @@
   color:#60f260;
 }
 table {
-  width: 1106px;
+  max-width: 1106px;
   margin: 0 auto;
   background-color: white;
   font-size: 13px;
@@ -60,4 +60,16 @@ table {
     }
 
   }
+}
+
+@media screen and (max-width: 1000px) {
+  table {
+  .row-server-name {
+    width: 80px;
+    }
+
+  }
+
+
+
 }
