update styles sheet

--- a/ui/src/app/main-table/main-table.component.html
+++ b/ui/src/app/main-table/main-table.component.html
@@ -19,7 +19,7 @@
                 <span class="server-name-icon-red" *ngIf="server.status === 'OFFLINE'">&times;</span>
                 {{server.status}}
               </div>  
-              <app-menu-dropdown [server]="server" (serverDetail)="execChangeServerState($event)"></app-menu-dropdown>
+              <app-menu-dropdown [server]="server" (serverSelected)="execChangeServerState($event)"></app-menu-dropdown>
        </td>
       </tr>
     </tbody>
