--- a/ui/src/app/menu-dropdown/menu-dropdown.component.scss
+++ b/ui/src/app/menu-dropdown/menu-dropdown.component.scss
@@ -1,7 +1,7 @@
 .cover {
     display: flex;
     justify-content: flex-end;
-    width: 300px;
+    width: 400px;
 
     .dropdowndots:after {
         content: '\2807';
@@ -14,8 +14,15 @@
     }
   }
 
-  @media screen and (max-width:650px) {
+  @media screen and (max-width:724px) {
     .cover {
         width: 200px;
     }
   }
+
+  @media screen and (max-width:500px) {
+    .cover {
+        width: 100%;
+    }
+  }
+
