update components and styles

--- a/ui/src/app/main-table/main-table.component.html
+++ b/ui/src/app/main-table/main-table.component.html
@@ -1,6 +1,7 @@
+<app-header-app></app-header-app>
 <div class="container-fluid">
   <div class="top-panel">
-      <app-score-elements></app-score-elements>
+      <app-panel-counter></app-panel-counter>
       <app-search-table (valueChange)='displayValueQuery($event)'></app-search-table>
   </div>
   <table class="table">
