--- a/ui/src/app/search-table/search-table.component.html
+++ b/ui/src/app/search-table/search-table.component.html
@@ -1,5 +1,4 @@
 <div class="container">
     <div class="row search-bar">
-           <input type="text" (keyup)="onKey($event)"  placeholder="Search.."> 
-    </div>
+           <input id="search" type="text" (keyup)="onKey($event)"  placeholder="Search.."> 
 </div>
