--- a/ui/src/app/menu-dropdown/menu-dropdown.component.scss
+++ b/ui/src/app/menu-dropdown/menu-dropdown.component.scss
@@ -1,3 +1,5 @@
+@import "../shared/styles/style-variables.scss";
+
 .cover {
     display: flex;
     justify-content: flex-end;
@@ -6,7 +8,7 @@
     .dropdowndots:after {
         content: '\2807';
         font-size: 2em;
-        color: #2e2e2e
+        color: $menuDotColor;
       }
 
     .navbar{
